--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "ffmpeg-binaries": "3.2.2-3",
     "he": "^1.1.1",
     "jimp": "^0.2.28",
+    "mc-utils": "^1.0.6",
     "opusscript": "0.0.3",
     "random-natural": "^1.0.3",
+    "relevant-urban": "^2.0.0",
     "sfwbooru": "0.0.2",
     "youtube-dl": "^1.11.1",
     "ytdl": "^0.6.0"
