--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "MALjs": "^0.1.0",
     "aniscrape": "^0.1.1",
     "aniscrape-kissanime": "^0.1.0",
+    "apiai": "^4.0.3",
     "booru": "^0.3.3",
     "ci-build": "0.0.7",
     "cleverbot-node": "^0.3.11",
@@ -19,6 +20,7 @@
     "jimp": "^0.2.28",
     "mc-utils": "^1.0.6",
     "opusscript": "0.0.3",
+    "over-scrap": "^1.5.0",
     "random-natural": "^1.0.3",
     "relevant-urban": "^2.0.0",
     "sfwbooru": "0.0.2",
