--- a/config-server.json
+++ b/config-server.json
@@ -1,11 +1,9 @@
 ﻿{
-  "tokenNormal": "",
-  "tokentest": "",
   "prefix": "~",
   "clevertoken": "CC28wix4wsprNGgS4UXViYCUfcw",
   "ownerID": "235047463017381888",
-  "token alt": "",
-  "token": "",
+  "token": "MzEzMjQ0NTc5MjQ1NTg4NDgw.C_s45w.rw3je9J2a4t7bEpVnoE1axUe8QM",
   "MALlogin": "GryphonBotana",
-  "MALpass": "alesolesov1"
+  "MALpass": "alesolesov1",
+  "prefixOwner": "@~"
 }
