Installed missing modules

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apiai": "^4.0.3",
     "artsy": "^1.8.0",
     "booru": "^0.3.3",
+    "cat-facts": "^1.0.2",
     "ci-build": "0.0.7",
     "cleverbot-node": "^0.3.11",
     "cleverbot.io": "^1.0.4",
@@ -22,6 +23,7 @@
     "mc-utils": "^1.0.6",
     "opusscript": "0.0.3",
     "over-scrap": "^1.5.0",
+    "random-cat": "^1.0.1",
     "random-natural": "^1.0.3",
     "relevant-urban": "^2.0.0",
     "sfwbooru": "0.0.2",
