--- a/config-server.json
+++ b/config-server.json
@@ -6,5 +6,5 @@
   "MALlogin": "GryphonBotana",
   "MALpass": "alesolesov1",
   "prefixOwner": "@~",
-  "ownerID": "235047463017381888",
+  "ownerID": "235047463017381888"
 }
