--- a/.gitignore
+++ b/.gitignore
@@ -53,8 +53,6 @@ jspm_packages
 
 .eslintrc.json
 config-local.json
-img/achiv.png
-img/rip.png
 img
-.vscode/settings.json
-.vscode/settings.json
+.vscode/
+
