--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^11.2.1",
     "ffmpeg-binaries": "3.2.2-3",
     "google-translate-api": "^2.3.0",
+    "got": "8.0.1",
     "he": "^1.1.1",
     "jimp": "^0.2.28",
     "opusscript": "0.0.3",
