--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   },
   "dependencies": {
     "MALjs": "^0.1.0",
-    "aniscrape": "^0.1.1",
-    "aniscrape-kissanime": "^0.1.0",
-    "apiai": "^4.0.3",
     "booru": "^0.3.3",
     "cat-facts": "^1.0.2",
     "cleverbot-node": "^0.3.11",
@@ -25,12 +22,9 @@
     "he": "^1.1.1",
     "jimp": "^0.2.28",
     "opusscript": "0.0.3",
-    "random-cat": "^1.0.1",
     "random-natural": "^1.0.3",
     "relevant-urban": "^2.0.0",
-    "sfwbooru": "0.0.2",
-    "youtube-dl": "^1.12.2",
-    "ytdl": "^0.6.0"
+    "sfwbooru": "0.0.2"
   },
   "devDependencies": {},
   "repository": {
