--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node .",
-    "test": "node . -testrun"
+    "test": "standard && node "
   },
   "dependencies": {
     "MALjs": "^0.1.0",
