--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "MALjs": "^0.1.0",
     "booru": "^0.3.3",
     "cat-facts": "^1.0.2",
+    "chalk": "2.3.0",
     "cleverbot-node": "^0.3.11",
     "discord.js": "^11.2.1",
     "dotenv": "5.0.0",
