Added OWNER_ID & FRIEND_ID var

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 PREFIX=~
 RUN_TYPE=PRODUCTION
 DISCORD_TOKEN=TOKEN
-CLEVER_BOT_TOKEN=TOKEN
 LOG_CHANNEL=ID
+CLEVER_BOT_TOKEN=TOKEN
+OWNER_ID=ID
+FRIEND_ID=ID
