--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Aleš Olesov",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon lib/app.js --exec babel-node --presets es2015,stage-2",
-    "build": "babel lib -d dist --presets es2015,stage-2",
+    "start": "nodemon lib/app.js --exec babel-node",
+    "build": "babel lib -d dist",
     "serve": "node dist/app.js",
     "test": "standart"
   },
