--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "babel-node .",
     "dev": "nodemon lib/app.js --exec babel-node", 
-    "build": "babel index.js -d src",
+    "build": "babel lib/ -d build/",
     "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage",
     "prepublish": "npm run build"
   },
