--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "babel-node .",
-    "dev": "nodemon lib/app.js --exec babel-node", 
-    "build": "babel lib/ -d build/",
-    "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage",
-    "prepublish": "npm run build"
+    "dev": "nodemon lib/app.js --exec babel-node",
+    "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
   },
   "nyc": {
     "require": [
@@ -48,6 +46,7 @@
     "babel-register": "6.26.0",
     "chai": "4.1.2",
     "cross-env": "5.1.3",
+    "istanbul": "0.4.5",
     "mocha": "5.0.1",
     "nyc": "11.4.1",
     "standart": "6.1.0"
