--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "babel-node .",
     "dev": "nodemon lib/app.js --exec babel-node",
-      "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
+    "test": "cross-env NODE_ENV=test nyc ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
   },
   "nyc": {
     "require": [
@@ -26,6 +26,7 @@
     "babel-plugin-inline-dotenv": "1.1.2",
     "booru": "^0.3.3",
     "cleverbot-node": "^0.3.11",
+    "codacy-coverage": "2.0.3",
     "discord.js": "^11.2.1",
     "dotenv": "5.0.0",
     "ffmpeg-binaries": "3.2.2-3",
@@ -34,6 +35,7 @@
     "got": "8.0.1",
     "he": "^1.1.1",
     "jimp": "^0.2.28",
+    "mocha-lcov-reporter": "1.3.0",
     "opusscript": "0.0.3",
     "random-natural": "^1.0.3",
     "relevant-urban": "^2.0.0",
