--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "babel-node .",
     "dev": "nodemon lib/app.js --exec babel-node",
-    "test": "cross-env NODE_ENV=test nyc mocha --report lcovonly -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
+    "test": "cross-env NODE_ENV=test nyc mocha --compilers=js:babel-core/register --require=babel-polyfill --reporter=lcovonly -R spec && cat ./coverage/lcov.info | node_modules/.bin/codacy-coverage -p ."
   },
   "nyc": {
     "require": [
@@ -43,7 +43,9 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
+    "babel-loader": "7.1.3",
     "babel-plugin-istanbul": "4.1.5",
+    "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-register": "6.26.0",
     "chai": "4.1.2",
