--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Aleš Olesov",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node .",
-    "dev": "nodemon lib/app.js --exec babel-node",
+    "start": "nodemon lib/app.js --exec babel-node",
+    "build": "babel lib -d dist",
+    "serve": "node dist/app.js",
     "test": "cross-env NODE_ENV=test nyc mocha --compilers=js:babel-core/register --require=babel-polyfill --reporter=lcovonly -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
   },
   "nyc": {
@@ -45,6 +46,7 @@
     "babel-cli": "6.26.0",
     "babel-loader": "7.1.3",
     "babel-plugin-istanbul": "4.1.5",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-register": "6.26.0",
