--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
     "cleverbot-node": "^0.3.11",
     "codacy-coverage": "2.0.3",
     "discord.js": "^11.2.1",
-    "dotenv": "5.0.0",
-    "ffmpeg-binaries": "3.2.2-3",
     "firebase-admin": "5.8.2",
-    "google-translate-api": "^2.3.0",
     "got": "8.0.1",
     "he": "^1.1.1",
     "jimp": "^0.2.28",
@@ -54,8 +51,7 @@
     "cross-env": "5.1.3",
     "istanbul": "0.4.5",
     "mocha": "5.0.1",
-    "nyc": "11.4.1",
-    "standart": "6.1.0"
+    "nyc": "11.4.1"
   },
   "repository": {
     "type": "git",
