--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "got": "8.0.1",
     "he": "^1.1.1",
     "jimp": "^0.2.28",
+    "json-stringify-safe": "5.0.1",
     "mocha-lcov-reporter": "1.3.0",
     "opusscript": "0.0.3",
     "random-natural": "^1.0.3",
