--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "MALjs": "^0.1.0",
     "babel-plugin-inline-dotenv": "1.1.2",
     "booru": "^0.3.3",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "cleverbot-node": "^0.3.11",
     "codacy-coverage": "2.0.3",
     "discord.js": "^11.2.1",
     "firebase-admin": "5.8.2",
     "got": "8.0.1",
     "he": "^1.1.1",
+    "install": "^0.10.4",
     "jimp": "^0.2.28",
     "json-stringify-safe": "5.0.1",
     "mocha-lcov-reporter": "1.3.0",
+    "npm": "^5.7.1",
     "opusscript": "0.0.3",
     "random-natural": "^1.0.3",
     "relevant-urban": "^2.0.0",
