--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-register": "6.26.0",
     "chai": "4.1.2",
     "cross-env": "5.1.3",
+    "dotenv": "^5.0.1",
     "istanbul": "0.4.5",
     "mocha": "5.0.1",
     "nyc": "11.4.1"
