--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
-    "python.pythonPath": "C:\\Python27\\python.exe",
-    "discord.enabled": true
+    "discord.enabled": true,
+    "cSpell.words": [
+        "griffinbot"
+    ]
 }
