--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,18 @@
     // Use IntelliSense to learn about possible Node.js debug attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-
+    "version": "2.0.0",
+    "tasks": [
         {
-            "type": "node",
-            "request": "launch",
-            "name": "Start",
-            "program": "${workspaceRoot}\\app.js"
+            "type": "typescript",
+            "tsconfig": "tsconfig.json",
+            "problemMatcher": [
+                "$tsc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
