--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "gryphonbot",
   "version": "3.2.4",
   "description": "Chatbot for discord",
-  "main": "./lib/app.js",
+  "main": "./lib/app",
   "author": "Aleš Olesov",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon lib/app.js --exec babel-node",
-    "build": "babel lib -d dist",
-    "serve": "node dist/app.js",
-    "test": "cross-env NODE_ENV=test nyc mocha --recursive --compilers=js:babel-core/register --require=babel-polyfill --reporter=lcovonly -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
+    "start": "nodemon --exec 'ts-node -r dotenv/config ./lib/app'",
+    "build": "tsc",
+    "serve": "node build/app",
+    "test": "cross-env NODE_ENV=test nyc mocha --recursive --require ts-node/register --reporter=lcovonly -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
   },
   "nyc": {
     "require": [
@@ -31,6 +31,7 @@
     "cleverbot-node": "^0.3.11",
     "codacy-coverage": "2.0.3",
     "discord.js": "^11.2.1",
+    "dotenv": "^5.0.1",
     "firebase-admin": "5.8.2",
     "got": "8.0.1",
     "he": "^1.1.1",
@@ -45,19 +46,13 @@
     "sfwbooru": "0.0.2"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-loader": "7.1.3",
-    "babel-plugin-istanbul": "4.1.5",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-register": "6.26.0",
     "chai": "4.1.2",
-    "cross-env": "5.1.3",
-    "dotenv": "^5.0.1",
     "istanbul": "0.4.5",
     "mocha": "5.0.1",
-    "nyc": "11.4.1"
+    "nyc": "11.4.1",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "tslint-config-standard": "^7.0.0"
   },
   "repository": {
     "type": "git",
