--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
+    "expect-firestore": "^0.1.0",
+    "firebase-server": "^0.12.0",
     "istanbul": "0.4.5",
     "mocha": "5.0.1",
     "nyc": "11.4.1",
