--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sfwbooru": "0.0.2"
   },
   "devDependencies": {
+    "@types/he": "^0.5.29",
     "chai": "4.1.2",
     "expect-firestore": "^0.1.0",
     "firebase-server": "^0.12.0",
@@ -51,7 +52,8 @@
     "nyc": "11.4.1",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0"
+    "tslint-config-standard": "^7.0.0",
+    "typescript": "^2.7.2"
   },
   "repository": {
     "type": "git",
