--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,20 +2,9 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Current TS Tests File",
+            "name": "Current project",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-            "args": ["-r", "ts-node/register", "${relativeFile}"],
-            "cwd": "${workspaceRoot}",
-            "protocol": "inspector",
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "name": "Current TS File",
-            "type": "node",
-            "request": "launch",
-            "args": ["${relativeFile}"],
             "args": ["-r", "ts-node/register", "-r", "dotenv/config", "${workspaceRoot}/lib/app.ts"],
             "cwd": "${workspaceRoot}",
             "protocol": "inspector",
