--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-PREFIX=~
-RUN_TYPE=PRODUCTION
-DISCORD_TOKEN=TOKEN
-LOG_CHANNEL=ID
-CLEVER_BOT_TOKEN=TOKEN
-OWNER_ID=ID
-FRIEND_ID=ID
+PREFIX=Default prefix for running commands
+DISCORD_TOKEN=Discord token
+LOG_CHANNEL=Logging channel ID that will be used to report the bot status
+CLEVER_BOT_TOKEN=Cleverbot (https://www.cleverbot.com/api/) API key
+OWNER_ID=Discord ID of you (or the owner)
+FRIEND_ID=Discord ID of your friend or special someone
