--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "author": "Aleš Olesov",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec 'ts-node -r dotenv/config ./lib/app'",
+    "start": "ts-node -r dotenv/config ./lib/app",
     "build": "tsc",
     "serve": "node build/app",
     "test": "cross-env NODE_ENV=test nyc mocha --recursive --require=ts-node/register --reporter=lcovonly -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
@@ -41,6 +41,8 @@
     "opusscript": "0.0.3",
     "random-natural": "^1.0.3",
     "relevant-urban": "^2.0.0",
+    "ts-node": "^5.0.1",
+    "typescript": "^2.7.2",
     "sfwbooru": "0.0.2"
   },
   "devDependencies": {
@@ -52,10 +54,8 @@
     "istanbul": "0.4.5",
     "mocha": "5.0.1",
     "nyc": "11.4.1",
-    "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.7.2"
+    "tslint-config-standard": "^7.0.0"
   },
   "repository": {
     "type": "git",
