--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "typescript.referencesCodeLens.enabled": true,
     "typescript.tsdk": "./node_modules/typescript/lib",
     "discord.enabled": true,
     "files.autoSave": "onFocusChange",
