--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "./lib/app",
   "author": "Aleš Olesov",
   "license": "MIT",
-  "scripts": { 
+  "scripts": {
+    "start": "node dist/app",
+    "build": "tsc",
+    "test": "mocha --recursive --require=ts-node/register test/**/*.test.ts",
+    "prestart": "npm build"
   },
   "dependencies": {
     "MALjs": "^0.1.0",
@@ -22,6 +26,7 @@
     "sfwbooru": "0.0.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.3",
     "@types/he": "^0.5.29",
     "@types/mongodb": "^3.0.15",
     "chai": "4.1.2",
