--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": "4.1.2",
     "mocha": "5.0.1",
     "nyc": "11.4.1",
+    "ts-node": "^6.0.0",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.7.2"
