--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/app",
-    "build": "tsc",
+    "build": "tsc ./lib",
     "test": "mocha --recursive --require=ts-node/register test/**/*.test.ts",
     "prestart": "npm build"
   },
@@ -28,9 +28,10 @@
   "devDependencies": {
     "@types/chai": "^4.1.3",
     "@types/he": "^0.5.29",
+    "@types/mocha": "^5.2.0",
     "@types/mongodb": "^3.0.15",
-    "chai": "4.1.2",
-    "mocha": "5.0.1",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1",
     "nyc": "11.4.1",
     "ts-node": "^6.0.0",
     "tslint": "^5.9.1",
