--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/app",
-    "build": "tsc ./lib",
-    "test": "mocha --recursive --require=ts-node/register test/**/*.test.ts",
-    "prestart": "npm build"
+    "build": "npm run build-ts && npm run tslint",
+    "watch-node": "nodemon dist/server.js",
+    "test": "mocha --require ts-node/register --require dotenv/config --require blanket --reporter mocha-lcov-reporter tests/**/**.test.ts",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "debug": "nodemon --inspect dist/server.js"
   },
   "dependencies": {
     "MALjs": "^0.1.0",
     "booru": "^0.4.0",
     "cleverbot-node": "^0.3.11",
+    "cleverbot.io": "^1.0.4",
     "discord.js": "^11.2.1",
     "got": "8.3.1",
     "he": "^1.1.1",
@@ -27,11 +32,19 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/got": "^8.3.1",
     "@types/he": "^0.5.29",
     "@types/mocha": "^5.2.0",
     "@types/mongodb": "^3.0.15",
+    "blanket": "^1.2.3",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "clevertype": "^2.0.4",
+    "coveralls": "^3.0.1",
+    "dotenv": "^5.0.1",
     "mocha": "^5.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "11.7.1",
     "ts-node": "^6.0.0",
     "tslint": "^5.9.1",
