--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,7 @@ tools/
 
 #Production files
 production/
+.vs/Griffin-Bot/v15/.suo
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/ProjectSettings.json
