--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
   # - test
   # - deploy
 
-job 1:
+build:
   stage: build
   script: make build dependencies
-  - npm build
+   - npm build
