--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+image: node:latest
+
 before_script:
   - apt-get update -qq && apt-get install -y -qq nodejs
   - npm i
@@ -7,7 +9,7 @@ stages:
   # - test
   # - deploy
 
-job 1:
+build:
   stage: build
   script: make build dependencies
-  - npm build
+   - npm build
