--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: node:latest
 
 before_script:
-  - apt-get update -qq && apt-get install -y -qq nodejs
+  # - apt-get update -qq && apt-get install -y -qq nodejs
   - npm i
 
 cache:
