--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/Peskyn12/griffin-bot.git"
+    "url": "git+ssh://git@gitlab.com:pesky12/Griffin-bot.git"
   },
   "keywords": [
     "chatbot",
